--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
+    "react-hamburger-button": "0.0.1",
+    "react-parallax": "^2.0.1",
+    "react-pose": "^3.3.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.0",
+    "react-transition-group": "^2.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
