--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.5.1",
+    "body-parser": "^1.18.3",
+    "clipboard": "^2.0.4",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "massive": "^5.7.2",
     "react": "^16.6.0",
+    "react-clipboard.js": "^2.0.2",
     "react-dom": "^16.6.0",
     "react-hamburger-button": "0.0.1",
     "react-parallax": "^2.0.1",
     "react-pose": "^3.3.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0",
-    "react-transition-group": "^2.5.0"
+    "react-transition-group": "^2.5.0",
+    "sweetalert2": "^7.33.1"
   },
   "scripts": {
     "start": "react-scripts start",
