--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.5.1",
-    "body-parser": "^1.18.3",
-    "clipboard": "^2.0.4",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "body-parser": "^1.19.0",
+    "clipboard": "^2.0.6",
     "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "massive": "^5.7.2",
-    "react": "^16.6.0",
-    "react-clipboard.js": "^2.0.2",
-    "react-dom": "^16.6.0",
+    "emailjs-com": "^2.6.4",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "massive": "^5.11.2",
+    "react": "^16.14.0",
+    "react-clipboard.js": "^2.0.16",
+    "react-dom": "^16.14.0",
     "react-hamburger-button": "0.0.1",
-    "react-parallax": "^2.0.1",
-    "react-pose": "^3.3.7",
+    "react-hook-form": "^6.15.4",
+    "react-material-ui-form-validator": "^2.1.4",
+    "react-parallax": "^2.2.4",
+    "react-pose": "^3.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0",
-    "react-transition-group": "^2.5.0",
+    "react-transition-group": "^2.9.0",
     "sweetalert2": "^7.33.1"
   },
   "scripts": {
