--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "body-parser": "^1.19.0",
-    "clipboard": "^2.0.6",
+    "browserslist": "^4.16.3",
+    "caniuse-lite": "^1.0.30001197",
+    "clipboard": "^2.0.7",
     "dotenv": "^6.2.0",
     "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
